--- a/Web/webserver/views/item_searched.pug
+++ b/Web/webserver/views/item_searched.pug
@@ -62,13 +62,15 @@ block custom-widget
         .modal-header
           button.close(type='button', data-dismiss='modal', aria-label='Close')
             span(aria-hidden='true') ×
-          form(method='post')
+        form(action='/save_list', method='post')
           h4#myModalLabel.modal-title
-            input.list(type='text', name='listName', required='', placeholder='Shopping List Name', autocomplete='off')
+            input.list(type='text', name='list_name', required='', placeholder='Shopping List Name', autocomplete='off')
             
-        .modal-body
-        .modal-footer.list
-          button.btn.btn-primary.saveChanges(type='button') Save Changes
+          .modal-body
+          .modal-footer.list
+            //-form(method='post')
+            input(type='hidden', name='list', value='')
+            button.btn.btn-primary.saveChanges(type='submit', onClick='save_list()') Save Changes
       
         
 
