--- a/Web/webserver/views/item_searched.pug
+++ b/Web/webserver/views/item_searched.pug
@@ -51,7 +51,7 @@ block custom-widget
             h3 #{item.data.name}
             p $#{item.data.price}
             p #{item.data.store}
-            a.btn.btn-primary.addToCartButton(href='#', role='button', id='item' + item_id) Add To List
+            a.btn.btn-primary.addToCartButton(href='#', role='button', id='item' + item_id) Add to List
             a.btn.btn-default(href=item.data.url, role='button', target='_blank') Visit Website
         - item_id++;
 		
@@ -68,7 +68,8 @@ block custom-widget
             
         .modal-body
         .modal-footer.list
-          button.btn.btn-primary.saveChanges(type='button') Save Changes
+          form(method='post')
+            button.btn.btn-primary.saveChanges(type='button') Save Changes
       
         
 
