Added update.pug as a link

--- a/Web/webserver/views/index.pug
+++ b/Web/webserver/views/index.pug
@@ -20,6 +20,10 @@ block navigation-bar
                 a(href='/login') Login
               li
                 a(href='/register', id='register') Register
+              li
+                a(href='/update', id='update') Update Account
+              li
+                a(href='/', id='logout') Logout
           li.dropdown
             a.dropdown-toggle(href='#', data-toggle='dropdown')
               | Lists
