--- a/Web/webserver/views/register.pug
+++ b/Web/webserver/views/register.pug
@@ -20,6 +20,8 @@ block navigation-bar
                 a(href='/login') Login
               li
                 a(href='/register') Register
+              li
+                a(href='/update') Update Account
           li.dropdown
             a.dropdown-toggle(href='#', data-toggle='dropdown')
               | Cart
