Manage previous list tab added

--- a/Web/webserver/views/index.pug
+++ b/Web/webserver/views/index.pug
@@ -21,6 +21,8 @@ block navigation-bar
               li
                 a(href='/register', id='register') Register
               li
+                a(href='/update', id='update') Manage Previous Lists
+              li
                 a(href='/update', id='update') Update Account
               li
                 a(href='/', id='logout') Logout
