--- a/Web/webserver/views/item_searched.pug
+++ b/Web/webserver/views/item_searched.pug
@@ -26,7 +26,7 @@ block navigation-bar
               span.caret
             ul.dropdown-menu
               li
-                a(href='#') View Full List
+                a(href='#') Manage Previous Lists
                 
 block custom-widget
   include search-bar.pug
