Fixed bug with background scaling

--- a/Web/webserver/public/css/index.css
+++ b/Web/webserver/public/css/index.css
@@ -1,6 +1,6 @@
 body {
      background-image: url('../CheckedOutBackgroundIndex.png');
-     background-size:1920px 1000px;
+     background-size: cover;
 }
 
 
