--- a/Web/webserver/public/css/login_page.css
+++ b/Web/webserver/public/css/login_page.css
@@ -6,7 +6,7 @@
 
 body {
      background-image: url('../CheckedOutBackgroundTest.png');
-     background-size:1920px 1000px; 
+     background-size: cover; 
       
 }
 
