more progress on saving lists, plus some other minor changes

--- a/Web/webserver/views/index.pug
+++ b/Web/webserver/views/index.pug
@@ -25,7 +25,7 @@ block navigation-bar
               li
                 a(href='/update', id='update') Update Account
               li
-                a(href='/', id='logout') Logout
+                a(href='/logout', id='logout') Logout
           li.dropdown
             a.dropdown-toggle(href='#', data-toggle='dropdown')
               | Lists
