--- a/Web/webserver/views/layout.pug
+++ b/Web/webserver/views/layout.pug
@@ -6,7 +6,7 @@ html(lang='en')
       meta(charset='utf-8')
       meta(name='viewport', content='width=device-width, initial-scale=1')
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
-      script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
+      script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
       link(href='css/bootstrap.min.css', rel='stylesheet')
       link(href='css/navbar.css', rel='stylesheet', type='text/css')
 
