--- a/Android/SmartShopper/app/src/main/res/layout/fragment_detail.xml
+++ b/Android/SmartShopper/app/src/main/res/layout/fragment_detail.xml
@@ -66,7 +66,7 @@
             android:layout_alignStart="@+id/detail_img" />
 
         <Button
-            android:text="To Cart"
+            android:text="To List"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/add_to_cart"
