--- a/Web/views/update.pug
+++ b/Web/views/update.pug
@@ -8,6 +8,8 @@ block custom-widget
   .Update
     form(method='post')
       h5 Update Your Password
+      if status
+        h4 #{status}
       input(type='password', name='old_password', required='', placeholder='Old Password', autocomplete='off')
       input(type='password', name='password', required='', placeholder='New Password', autocomplete='off')
       input(type='password', name='password_verify', required='', placeholder='Confirm New Password', autocomplete='off')
