--- a/Web/views/register.pug
+++ b/Web/views/register.pug
@@ -8,6 +8,8 @@ block custom-widget
   .Register
     form(onsubmit='return checkForm(this);' method='post')
       h5  Welcome to CheckedOut! 
+      if email_taken
+        h4 #{email_taken}    
       input(type='text', name='name', required='', placeholder='Name', autocomplete='off')
       input(type='text', name='email', required='', placeholder='Enter Email', autocomplete='off')
       input(type='text', name='email_verify', required='', placeholder='Confirm Email', autocomplete='off')
