--- a/Web/views/navbar-header.pug
+++ b/Web/views/navbar-header.pug
@@ -1,3 +1,8 @@
 .navbar-header
-  a(href='/')
-    img(src='CheckedOutLogo4.jpeg')
+  button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1', aria-expanded='false')
+    span.sr-only Toggle navigation
+    span.icon-bar
+    span.icon-bar
+    span.icon-bar
+    a(href='/')
+      img(src='CheckedOutLogo4.jpeg')
