Fixed Location of List Name Entry

--- a/Web/public/css/item_searched.css
+++ b/Web/public/css/item_searched.css
@@ -125,7 +125,7 @@ button.btn.btn-primary.saveChanges {
 
 .modal-title {
     text-align: center;
-    margin: 0;
+    margin-top: -49px;
     line-height: 1.42857143;
 }
 
