Added ellipse on item names

--- a/Web/public/css/item_searched.css
+++ b/Web/public/css/item_searched.css
@@ -155,4 +155,16 @@ input.list {
 }
 
 
+.ellipsis {
+    overflow:hidden;
+    width: 60px;
+    direction:rtl; 
+    margin-left:15px;
+    white-space: nowrap;
+}
+
+.ellipsis:after {
+  position:absolute;left:0px; content:"...";
+}​
+
 
