--- a/Web/views/item_searched.pug
+++ b/Web/views/item_searched.pug
@@ -22,7 +22,7 @@ block custom-widget
         .thumbnail
           img(src=(item.data.image))
           .caption
-            h3 #{item.data.name}
+            h3.ellipsis #{item.data.name}
             p $#{item.data.price}
             p #{item.data.store}
             a.btn.btn-primary.addToCartButton(href='#', role='button', id='item' + item_id) Add to List
