--- a/Android/SmartShopper/app/src/main/res/layout/fragment_shopping_list.xml
+++ b/Android/SmartShopper/app/src/main/res/layout/fragment_shopping_list.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/cart_wrapper"
-            android:layout_below="@+id/save_list_button">
+            android:layout_below="@+id/new_list_button">
 
             <TextView
                 android:id="@+id/cart_summary"
@@ -32,23 +32,21 @@
 
         </RelativeLayout>
 
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:layout_above="@+id/cart_wrapper"
-            android:layout_alignParentStart="true"
-            android:id="@+id/new_list_name"
-            android:hint="List Name" />
-
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/save_list_button"
-            android:text="Save List"
+            android:id="@+id/new_list_button"
+            android:text="New List"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true" />
+
+        <Spinner
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/all_usr_list"
+            android:layout_above="@+id/cart_wrapper" />
 
     </RelativeLayout>
 
