--- a/Web/public/css/item_searched.css
+++ b/Web/public/css/item_searched.css
@@ -162,5 +162,14 @@ input.list {
 }
 
 
+button.btn.btn-primary.btn-lg.showCartButton {
+    
+  
+}
 
+
+button.btn.btn-primary.btn-lg.emptyCartButton {
+  
+  
+}
 
