--- a/Web/public/css/item_searched.css
+++ b/Web/public/css/item_searched.css
@@ -52,6 +52,8 @@ ul.products {
     max-height: 100px;
     max-width: 100px; 
     border-radius: 12px; 
+    min-width: 100px;
+    min-height: 100px;
 }
 
 .thumbnail .caption {
@@ -163,13 +165,13 @@ input.list {
 
 
 button.btn.btn-primary.btn-lg.showCartButton {
-    
-  
+    margin-left: 50px;
+    margin-top: -100px;
 }
 
 
 button.btn.btn-primary.btn-lg.emptyCartButton {
-  
-  
+    margin-left: 210px;
+    margin-top: -99px;
 }
 
