--- a/Web/public/css/item_searched.css
+++ b/Web/public/css/item_searched.css
@@ -175,3 +175,14 @@ button.btn.btn-primary.btn-lg.emptyCartButton {
     margin-top: -99px;
 }
 
+
+a.btn.btn-primary.addToCartButton {
+  
+  
+}
+
+
+a.btn.btn-default.visitWebsiteButton {
+  
+  
+}
