Removed some of the items in navbar

--- a/Web/views/logged_in_menus.pug
+++ b/Web/views/logged_in_menus.pug
@@ -13,6 +13,4 @@ li.dropdown
     span.caret
   ul.dropdown-menu
     li
-      a(href='#') Create New List
-    li
-      a(href='#') Edit Lists
+      a(href='#') Manage Lists
