--- a/Web/views/layout.pug
+++ b/Web/views/layout.pug
@@ -27,4 +27,5 @@ html(lang='en')
     block content
     block footer-scripts
       script(src='js/jquery-3.1.1.min.js', type='text/javascript')
-      script(src='js/browser.js', type='text/javascript')      
+      script(src='js/browser.js', type='text/javascript')  
+      script(src='js/list.js', type='text/javascript')         
