--- a/Web/views/index.pug
+++ b/Web/views/index.pug
@@ -2,9 +2,9 @@ extends layout.pug
 
 block append head-content
   link(href='css/index.css', rel='stylesheet')
+  script(src='js/list.js', type='text/javascript') 
 
 block custom-widget
   include search-bar.pug
-
-window.onload = function resetLocalStorage();
+  window.onload = function resetLocalStorage();
 
