Fixing Bug from previous commit

--- a/Web/views/index.pug
+++ b/Web/views/index.pug
@@ -7,5 +7,5 @@ block append head-content
 block custom-widget
   include search-bar.pug
   script. 
-    window.onload = function resetLocalStorage();
+    window.onload = function resetLocalStorage()
 
