Adding Greeting Bugs

--- a/Web/views/logged_in_menus.pug
+++ b/Web/views/logged_in_menus.pug
@@ -1,6 +1,6 @@
+li.greeting
+  | Hello, Name
 li.dropdown
-  a.greeting
-    | Hello, NAME
   a.dropdown-toggle(href='#', data-toggle='dropdown')
     | Account
     span.caret
