--- a/Web/public/css/index.css
+++ b/Web/public/css/index.css
@@ -79,6 +79,7 @@ body {
 li.greeting {
     position: relative;
     display: block;
-    margin-top: 100px;
+    margin-top: 103px;
+    padding: 12px;
 }
 
