--- a/Web/public/css/update.css
+++ b/Web/public/css/update.css
@@ -130,3 +130,11 @@ input {
     margin-right: -15px;
     margin-top: 100px; 
 }
+
+
+li.greeting {
+    position: relative;
+    display: block;
+    margin-top: 103px;
+    padding: 12px;
+}
