fixed greeting and update

--- a/Web/views/update.pug
+++ b/Web/views/update.pug
@@ -13,4 +13,4 @@ block custom-widget
       input(type='password', name='old_password', required='', placeholder='Old Password', autocomplete='off')
       input(type='password', name='password', required='', placeholder='New Password', autocomplete='off')
       input(type='password', name='password_verify', required='', placeholder='Confirm New Password', autocomplete='off')
-      input(type='submit', value='Update Account', title='Update')
+      input(type='submit', value='Update Password', title='Update')
