--- a/Web/views/logged_in_menus.pug
+++ b/Web/views/logged_in_menus.pug
@@ -1,5 +1,5 @@
 li.greeting
-  | Hello, Name
+  | Hello, #{logged_in_name}.
 li.dropdown
   a.dropdown-toggle(href='#', data-toggle='dropdown')
     | Account
