--- a/Web/views/logged_in_menus.pug
+++ b/Web/views/logged_in_menus.pug
@@ -8,6 +8,8 @@ li.dropdown
     li
       a(href='/update', id='update') Change Password
     li
+      a(href='/delete_acc', id='delete_acc') Delete Account
+    li
       a(href='/logout', id='logout') Logout
 li.dropdown
   a.dropdown-toggle(href='#', data-toggle='dropdown')
