finished register_account test, added delete_acc

--- a/Web/views/delete_acc.pug
+++ b/Web/views/delete_acc.pug
@@ -1,11 +1,11 @@
 extends layout.pug
 
 block append head-content
-  link(href='css/update.css' rel='stylesheet')
+  link(href='css/delete_acc.css' rel='stylesheet')
   link(href='https://fonts.googleapis.com/css?family=Source+Sans+Pro', rel='stylesheet', type='text/css')
   
 block custom-widget
-  .Update
+  .Delete_Acc
     form(method='post')
       h5 Delete your account
       if status
