--- a/Web/views/logged_out_menus.pug
+++ b/Web/views/logged_out_menus.pug
@@ -4,6 +4,6 @@ li.dropdown
     span.caret
   ul.dropdown-menu
     li
-      a(href='/login') Login
+      a(href='/login', id='login') Login
     li
       a(href='/register', id='register') Register
