added missing account id

--- a/Web/views/logged_in_menus.pug
+++ b/Web/views/logged_in_menus.pug
@@ -1,7 +1,7 @@
 li.greeting
   | Hello, #{logged_in_name}.
 li.dropdown
-  a.dropdown-toggle(href='#', data-toggle='dropdown')
+  a.dropdown-toggle(id='account', href='#', data-toggle='dropdown')
     | Account
     span.caret
   ul.dropdown-menu
