--- a/Web/views/logged_out_menus.pug
+++ b/Web/views/logged_out_menus.pug
@@ -1,5 +1,5 @@
 li.dropdown
-  a.dropdown-toggle(href='#', data-toggle='dropdown')
+  a.dropdown-toggle(id='account', href='#', data-toggle='dropdown')
     | Account
     span.caret
   ul.dropdown-menu
