--- a/Web/views/logged_in_menus.pug
+++ b/Web/views/logged_in_menus.pug
@@ -17,4 +17,4 @@ li.dropdown
     span.caret
   ul.dropdown-menu
     li
-      a(href='#') Manage Lists
+      a(href='/manage_lists') Manage Lists
