--- a/Web/public/css/login_page.css
+++ b/Web/public/css/login_page.css
@@ -58,7 +58,8 @@ body {
 
 #login-page li {
   margin-right: 10px; 
-  position:absolute;
+  /* position:absolute; */
+  position:relative;
   right:40px;
   bottom:60px;
   list-style:none;
