--- a/Web/views/login.pug
+++ b/Web/views/login.pug
@@ -13,9 +13,9 @@ block custom-widget
         h5 #{login_failed}
       input.email(type='text', name='email', required='', placeholder='Enter Email')
       input.pw(type='password', name='password', required='', placeholder='Enter Password')
-      li
+      li#verify
         a(href='#') Verify Email
-      li
+      li#register
         a(href='/register') Register
       input.button(type='submit', value='Log in')   
                
