--- a/Web/views/item_searched.pug
+++ b/Web/views/item_searched.pug
@@ -30,18 +30,20 @@ block content
         - item_id++;
 		
   // Modal
-  include modal.pug
-    .modal-header
-      button.close(type='button', data-dismiss='modal', aria-label='Close')
-        span(aria-hidden='true') ×
-    form(action='/save_list', method='post')
-      h4#myModalLabel.modal-title
-        input.list(type='text', name='list_name', required='', placeholder='Shopping List Name', autocomplete='off')
-        
-      .modal-body
-      .modal-footer.list
-        input(type='hidden', name='list', value='')
-        button.btn.btn-primary.saveChanges(type='submit', onClick='save_list()') Save Changes
+  #myModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel')
+    .modal-dialog(role='document')
+      .modal-content
+        .modal-header
+          button.close(type='button', data-dismiss='modal', aria-label='Close')
+            span(aria-hidden='true') ×
+        form(action='/save_list', method='post')
+          h4#myModalLabel.modal-title
+            input.list(type='text', name='list_name', required='', placeholder='Shopping List Name', autocomplete='off')
+            
+          .modal-body
+          .modal-footer.list
+            input(type='hidden', name='list', value='')
+            button.btn.btn-primary.saveChanges(type='submit', onClick='save_list()') Save Changes
       
         
 
