--- a/Web/views/login.pug
+++ b/Web/views/login.pug
@@ -27,11 +27,9 @@ block content
         .modal-header
           button.close(type='button', data-dismiss='modal', aria-label='Close')
             span(aria-hidden='true') ×
-        form(action='/save_list', method='post')
+        form(action='/verify_code', method='post')
           h4#myModalLabel.modal-title
-            input.list(type='text', name='list_name', required='', placeholder='Shopping List Name', autocomplete='off')
-            
+            input(type='text', name='verification_code', required='', placeholder='Verification Code', autocomplete='off')
           .modal-body
           .modal-footer.list
-            input(type='hidden', name='list', value='')
-            button.btn.btn-primary.saveChanges(type='submit', onClick='save_list()') Save Changes               
+            button.btn.btn-primary.saveChanges(type='submit'value='Submit Code', title='Submit Code') Submit Code               
