--- a/Web/views/login.pug
+++ b/Web/views/login.pug
@@ -29,7 +29,7 @@ block content
             span(aria-hidden='true') ×
         form(action='/verify_code', method='post')
           h4#myModalLabel.modal-title
-            input(type='text', name='email', required='', placeholder='Email')
+            input(type='text', name='email_verify', required='', placeholder='Email')
             input(type='text', name='verifiy_num', required='', placeholder='Verification Code', autocomplete='off')
           .modal-body
           .modal-footer.list
