--- a/Web/views/login.pug
+++ b/Web/views/login.pug
@@ -27,7 +27,7 @@ block content
         .modal-header
           button.close(type='button', data-dismiss='modal', aria-label='Close')
             span(aria-hidden='true') ×
-        form(action='/verify_code', method='post')
+        form#verify(action='/verify_code', method='post')
           h4#myModalLabel.modal-title
             input(type='text', name='email_verify', required='', placeholder='Email')
             input(type='text', name='verifiy_num', required='', placeholder='Verification Code', autocomplete='off')
@@ -35,6 +35,6 @@ block content
           .modal-footer.list
             button.btn.btn-primary.saveChanges(type='submit', value='Submit Code', title='Submit Code') Submit Code
 
-
-block append footer-scripts                           
-  script(src='js/verification.js', type='text/javascript')
+//-
+  block append footer-scripts                           
+    script(src='js/verification.js', type='text/javascript')
