--- a/Web/views/login.pug
+++ b/Web/views/login.pug
@@ -30,7 +30,7 @@ block content
         form#verify(action='/verify_code', method='post')
           h4#myModalLabel.modal-title
             input(type='text', name='email_verify', required='', placeholder='Email')
-            input(type='text', name='verifiy_num', required='', placeholder='Verification Code', autocomplete='off')
+            input(type='text', name='verify_num', required='', placeholder='Verification Code', autocomplete='off')
           .modal-body
           .modal-footer.list
             button.btn.btn-primary.saveChanges(type='submit', value='Submit Code', title='Submit Code') Submit Code
