--- a/Web/views/login.pug
+++ b/Web/views/login.pug
@@ -29,12 +29,12 @@ block content
             span(aria-hidden='true') ×
         form#verify(action='/verify_code', method='post')
           h4#myModalLabel.modal-title
-            input(type='text', name='email_verify', required='', placeholder='Email')
+            input(type='text', name='email', required='', placeholder='Email')
             input(type='text', name='verify_num', required='', placeholder='Verification Code', autocomplete='off')
           .modal-body
           .modal-footer.list
             button.btn.btn-primary.saveChanges(type='submit', value='Submit Code', title='Submit Code') Submit Code
 
-//-
-  block append footer-scripts                           
-    script(src='js/verification.js', type='text/javascript')
+
+block append footer-scripts                           
+  script(src='js/verification.js', type='text/javascript')
