--- a/Web/views/login.pug
+++ b/Web/views/login.pug
@@ -14,27 +14,7 @@ block custom-widget
       input.email(type='text', name='email', required='', placeholder='Enter Email')
       input.pw(type='password', name='password', required='', placeholder='Enter Password')
       li#verify
-        a(href='#', data-toggle='modal', data-target='#myModal') Verify Email
+        a(href='/verify') Verify Email
       li#register
         a(href='/register') Register
-      input.button(type='submit', value='Log in')   
-               
-block content
-  // Modal
-  #myModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel')
-    .modal-dialog(role='document')
-      .modal-content
-        .modal-header
-          button.close(type='button', data-dismiss='modal', aria-label='Close')
-            span(aria-hidden='true') ×
-        form#verify(action='/verify_code', method='post')
-          h4#myModalLabel.modal-title
-            input(type='text', name='email_verify', required='', placeholder='Email')
-            input(type='text', name='verify_num', required='', placeholder='Verification Code', autocomplete='off')
-          .modal-body
-          .modal-footer.list
-            button.btn.btn-primary.saveChanges(type='submit', value='Submit Code', title='Submit Code') Submit Code
-
-
-block append footer-scripts                           
-  script(src='js/verification.js', type='text/javascript')
+      input.button(type='submit', value='Log in')
