--- a/Web/views/verify.pug
+++ b/Web/views/verify.pug
@@ -12,6 +12,6 @@ block custom-widget
         h4 #{status}
       input(type='text', name='email', required='', placeholder='Email')
       input(type='text', name='verify_num', required='', placeholder='Verification Code', autocomplete='off')
-      li
+      li#login
         a(href='/login') Back to Login
       input(type='submit', value='Submit Code', title='Submit Code')
