--- a/Web/views/index.pug
+++ b/Web/views/index.pug
@@ -6,6 +6,13 @@ block append head-content
 
 block custom-widget
   include search-bar.pug
+  
+  form.selectStore(method='post')
+  select.selectpicker(multiple='', data-max-options='2', data-actions-box='true')
+    option Costco
+    option SuperStore
+    option Walmart
+  
   script. 
     onload = resetLocalStorageIndex()
 
