--- a/Web/views/manage_lists.pug
+++ b/Web/views/manage_lists.pug
@@ -14,7 +14,7 @@ block content
       .col-sm-6.col-md-4
       for list in user_lists
         form.userLists(method='get')
-          a.viewList(href='/item_searched')
+          a.viewList(href='#')
             p #{list}
 
 		
