Fixing Bugs with Option Box

--- a/Web/views/index.pug
+++ b/Web/views/index.pug
@@ -8,7 +8,7 @@ block custom-widget
   include search-bar.pug
   
   form.selectStore(method='post')
-    select.selectpicker(multiple='', data-max-options='2', data-actions-box='true')
+    select.selectpicker(multiple='', data-actions-box='true')
       option Costco
       option SuperStore
       option Walmart
