Fixing Bugs with Option Box

--- a/Web/views/index.pug
+++ b/Web/views/index.pug
@@ -7,7 +7,7 @@ block append head-content
 block custom-widget
   include search-bar.pug
  
-  select.selectpicker(multiple='', data-actions-box='true')
+  select.selectpicker(data-actions-box='true')
     option Costco
     option SuperStore
     option Walmart
