--- a/Web/views/index.pug
+++ b/Web/views/index.pug
@@ -11,7 +11,7 @@ block custom-widget
   include search-bar.pug
   
   form.selectStore(method='post')
-    select.selectpicker(multiple title="Shopping Location Options", multiple data-actions-box='true')
+    select.selectpicker(title="Shopping Location Options", multiple data-actions-box='true')
       option Costco
       option SuperStore
       option Walmart
