--- a/Web/views/index.pug
+++ b/Web/views/index.pug
@@ -11,13 +11,13 @@ block custom-widget
   include search-bar.pug
   
   form.selectStore(method='post')
-    select.selectpicker(title="Shopping Location Options", multiple data-actions-box='true')
+    select.selectpicker(multiple title="Shopping Location Options", data-actions-box='true')
       option Costco
       option SuperStore
       option Walmart
    
   form.selectPrice(method='post')
-    input#ex7(type='text', data-slider-min='0', data-slider-max='15000', data-slider-step='5', data-slider-value='5', data-slider-enabled='false')
+    input#ex7(type='text', data-slider-min='0', data-slider-max='15000', data-slider-step='1', data-slider-value='5', data-slider-enabled='false')
     input#ex7-enabled(type='checkbox')
     |  Enabled
     
