--- a/Web/views/index.pug
+++ b/Web/views/index.pug
@@ -14,23 +14,17 @@ block append head-content
 block custom-widget
   include search-bar.pug
   
-  input#ex7(type='text', data-slider-min='0', data-slider-max='15000', data-slider-step='1', data-slider-value='5', data-slider-enabled='false')
-  input#ex7-enabled(type='checkbox')
-  |  Enabled
+  form.selectPrice(method='post')
+    input#ex7(type='text', data-slider-min='0', data-slider-max='20', data-slider-step='1', data-slider-value='5', data-slider-enabled='false')
+    input#ex7-enabled(type='checkbox')
+    |  Enabled
+
   
   form.selectStore(method='post')
     select.selectpicker(multiple title="Shopping Location Options", data-actions-box='true')
       option Costco
       option SuperStore
       option Walmart
-   
-  
-    
-    
-  
-      
-      
-  
   
   script. 
     onload = resetLocalStorageIndex()
