--- a/Web/views/index.pug
+++ b/Web/views/index.pug
@@ -6,18 +6,33 @@ block append head-content
   link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/css/bootstrap-select.min.css')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/js/bootstrap-select.min.js')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/js/i18n/defaults-*.min.js')
-  link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.5.3/css/bootstrap-slider.css')
-  link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.5.3/css/bootstrap-slider.min.css')
+  link(rel='stylesheet', href='//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css')
+  link(rel='stylesheet', href='/resources/demos/style.css')
+  script(src='https://code.jquery.com/jquery-1.12.4.js')
+  script(src='https://code.jquery.com/ui/1.12.1/jquery-ui.js')
 
-  
 block custom-widget
   include search-bar.pug
   
-  form.selectPrice(method='post')
-    input#ex7(type='text', data-slider-min='0', data-slider-max='20', data-slider-step='1', data-slider-value='5', data-slider-enabled='false')
-    input#ex7-enabled(type='checkbox')
-    |  Enabled
+  script.
+    $( function() {
+      $( "#slider-range" ).slider({
+        range: true,
+        min: 0,
+        max: 15000,
+        values: [ 0, 100 ],
+        slide: function( event, ui ) {
+          $( "#amount" ).val( "$" + ui.values[ 0 ] + " - $" + ui.values[ 1 ] );
+        }
+      });
+      $( "#amount" ).val( "$" + $( "#slider-range" ).slider( "values", 0 ) +
+        " - $" + $( "#slider-range" ).slider( "values", 1 ) );
+    } );
 
+  p
+    label(for='amount') Price range:
+    input#amount(type='text', readonly='', style='border:0; color:#f6931f; font-weight:bold;')
+  #slider-range
   
   form.selectStore(method='post')
     select.selectpicker(multiple title="Shopping Location Options", data-actions-box='true')
