--- a/Web/views/register.pug
+++ b/Web/views/register.pug
@@ -15,4 +15,6 @@ block custom-widget
       input(type='text', name='email_verify', required='', placeholder='Confirm Email', autocomplete='off')
       input(type='password', name='password', required='', placeholder='Password', autocomplete='off')
       input(type='password', name='password_verify', required='', placeholder='Confirm Password', autocomplete='off')
+      //- For Testing
+      input(type='hidden', name='test', value='False')
       input(type='submit', value='Register', title='Register')
