--- a/Web/views/manage_lists.pug
+++ b/Web/views/manage_lists.pug
@@ -3,6 +3,7 @@ extends layout.pug
 block append head-content
   link(href='css/manage_lists.css', rel='stylesheet', type='text/css')
                 
+//- 
 block custom-widget
   
   
@@ -13,9 +14,12 @@ block content
     .row
       .col-sm-6.col-md-4
       for list in user_lists
-        form.userLists(method='get')
-          a.viewList(href='#')
-            p #{list}
+        form.userLists(method='get', action='get_list')
+          a.viewList(href='#') #{list}
+          p#results TEST
+
+block append footer-scripts
+  script(src='js/get_list.js', type='text/javascript')            
 
 		
       
