--- a/Web/public/css/index.css
+++ b/Web/public/css/index.css
@@ -83,3 +83,20 @@ li.greeting {
     padding: 12px;
 }
 
+
+.selectStore {
+    margin-top: 2px;
+}
+
+.selectNumberItems {
+  
+}
+
+.selectMinPrice {
+  
+}
+
+.selectMaxPrice {
+  
+}
+
