--- a/Web/views/index.pug
+++ b/Web/views/index.pug
@@ -28,6 +28,8 @@ block custom-widget
       .form-group
         label(for='minPrice') Minimum Price:
         input#minPrice.form-control(type='text')
+  
+  form.selectMaxPrice(method='post')  
     .col-xs-2  
       .form-group
         label(for='maxPrice') Maximum Price:
